--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
   <link rel="icon" href="favicon.png" />
   <script src="https://kit.fontawesome.com/c0ffa5e1d4.js" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Rajdhani:wght@300;400;500;600;700&family=Space+Grotesk:wght@300..700&display=swap"
-    rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Orbitron:wght@400..900&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Goldman:wght@400;700&display=swap" rel="stylesheet">
+
   <script type="module" src="dorian.js"></script>
 </head>
 
@@ -44,8 +45,8 @@
     <video autoplay muted loop playsinline class="header-video">
       <source src="cubesky.webm" type="video/webm" />
     </video>
-    <a href="https://dorianai.replit.app/" class="heading-title">Dorian</a>
-    <p class="heading-subtitle">A project by DorianAI</p>
+    <a href="https://dorianai.replit.app/" class="heading-title">DORIAN</a>
+    <p class="heading-subtitle">Intelligence, redefined.</p>
     <div class="header-divider"></div>
   </div>
 
