feat: ui speed buttons and footer video

--- a/index.html
+++ b/index.html
@@ -174,31 +174,32 @@
 
         <!-- Speed Buttons -->
         <div class="ui-speed-box">
-          <div class="ui-speed-btns">
-            <button id="pause-btn" class="custom-btn" type="button">Pause</button>
-            <button id="reset-btn" class="custom-btn" type="button">Reset</button>
-          </div>
+          
         </div>
 
       </div>
 
       <!-- Toggles -->
       <div class="column-right-column-lower">
+        
 
 
         <audio id="ambience-audio" src="vibes.wav" type="audio/wav"></audio>
       </div>
+      <div class="ui-speed-btns">
+            <button id="pause-btn" class="custom-btn" type="button">Pause</button>
+            <button id="reset-btn" class="custom-btn" type="button">Reset</button>
+          </div>
     </div>
   </main>
 
   <!-- Thought Log Display -->
   <section class="thought-log-section-visible">
     <video autoplay muted loop playsinline class="thought-log-video">
-      <source src="cube.webm" type="video/webm" />
+      <source src="footer.webm" type="video/webm" />
     </video>
     <h2 class="thought-log-title">Dorian's Recent Thoughts</h2>
-    <h3 class="thought-log-subtitle">Each tick interval, Dorian reflects on its state. These are the most recent
-      thoughts.</h3>
+    <h3 class="thought-log-subtitle">Each set tick interval, Dorian reflects on its state. Here, a log can be found of status reports alongside all user interactions with Dorian.</h3>
   </section>
 
   <!-- Live Thoughts Log -->
