fix: restored functionality to reveal thought log button

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
   </section>
 
   <!-- Live Thoughts Log -->
-  <section id="dorian-thought-log" class="thought-log-section-pre">
+  <section id="thought-log-section" class="thought-log-section-pre">
     <div class="thought-log-parent">
       <pre id="thought-log-section" class="thought-log"></pre>
     </div>
