--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <a href="#socials"><span class="material-symbols-outlined">
               3p
             </span> Socials</a>
-          <a href="#back" class="action-menu-btn-btn"><span class="material-symbols-outlined">
+          <a href="#backbutton" class="action-menu-btn-btn"><span class="material-symbols-outlined">
               arrow_downward
             </span> </a>
         </div>
