--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
       <div class="navigation-bar-right">
           <button class="navigation-button" >Overview</button>
         <button class="navigation-button" id="chatbotBox">Chat</button>
+                  <button class="navigation-button" >Overview</button>
+
       </div>
   
   </nav>
