fix: hero page animation on launch for mobile devices

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <nav class="navigation-bar" id="navigation-bar">
     <div class="navigation-bar-left">
         <img src="logo.png" alt="Dorian Logo" class="logo">
+      <span class="navigation-title">Dorian</span>
       </div>
       <div class="navigation-bar-right">
           <button class="navigation-button" >Overview</button>
@@ -63,6 +64,8 @@
       <source src="cubesky.webm" type="video/webm" />
     </video>
     <a href="https://dorianai.replit.app/" class="heading-title">DORIAN</a>
+        <a class="heading-title-living-grid">THE LIVING GRID</a>
+
     <p class="heading-subtitle">Intelligence, redefined.</p>
     <div class="header-divider"></div>
   </div>
