fix: Update styles and content

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <video autoplay muted loop playsinline class="header-video">
       <source src="cubesky.webm" type="video/webm" />
     </video>
-    <a href="https://dorianai.replit.app/" class="heading-title">DORIAN</a>
+    <a href="https://dorianai.replit.app/" class="heading-title">Dorian</a>
         <a class="heading-title-living-grid">THE LIVING GRID</a>
 
     <p class="heading-subtitle">Intelligence, redefined.</p>
