--- a/index.html
+++ b/index.html
@@ -51,16 +51,15 @@
   <nav class="action-bar">
     <button class="action-menu-btn-icon" id="action-menu-btn-icon"></button>
     <div class="action-menu-btns" id="action-menu-btns">
-      <a href="#home" class="action-menu-btn-btn">
+      <button class="action-menu-btn-btn" data-target="#home">
         <span class="material-symbols-outlined">home</span> Home
-      </a>
-      <a href="#chat" class="action-menu-btn-btn">
+      </button>
+      <button class="action-menu-btn-btn" data-target="#chat">
         <span class="material-symbols-outlined">chat_bubble</span> Chat
-      </a>
-      <a href="#about" class="action-menu-btn-btn">
+      </button>
+      <button class="action-menu-btn-btn" data-target="#about">
         <span class="material-symbols-outlined">info</span> About
-      </a>
-
+      </button>
     </div>
   </nav>
 
