feat: home button functionality

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
   <nav class="action-bar">
     <button class="action-menu-btn-icon" id="action-menu-btn-icon"></button>
     <div class="action-menu-btns" id="action-menu-btns">
-      <button class="action-menu-btn-btn" data-target="#home">
+      <a class="action-menu-btn-btn" href="index.html" target="_self">
         <span class="material-symbols-outlined">home</span> Home
-      </button>
+      </a>
       <button class="action-menu-btn-btn" data-target="#chat">
         <span class="material-symbols-outlined">chat_bubble</span> Chat
       </button>
