feat: additional button functionality introduced

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
       <span class="navigation-title">Dorian</span>
     </div>
     <div class="navigation-bar-right">
-      <button class="navigation-button">About</button>
-      <button class="navigation-button" id="chatbotBox">Chat</button>
-      <button class="navigation-button">Socials</button>
+      <button id="about-btn-nav" class="navigation-button">About</button>
+      <button class="navigation-button" id="chat-btn-nav">Chat</button>
+      <button class="navigation-button" id="social-btn-nav">Socials</button>
 
     </div>
 
@@ -245,6 +245,7 @@
         emotional states emerge through interaction and combination, enabling rich emotional diversity. The system also
         models inter-emotional dynamics, such as how one emotion can amplify, suppress, or transform another, creating a
         responsive emotional network.</p>
+        
       <p class="emotion-architect-text">Environmental zones (like deserts or mountains) and temporal factors (such as
         time of day or season) shape emotional behavior in context-sensitive ways, making each experience feel grounded
         and dynamic. Additionally, an integrated memory system tracks emotional history, allowing virtual entities to
@@ -253,6 +254,30 @@
         research, this simulation brings emotional intelligence to life in compelling, interactive environments.
       </p>
     </div>
+  </section>
+    <section id="features-spot">
+      
+
+      <ul>
+  <li>🧠 Emotionally intelligent agents with adaptive behavior</li>
+  <li>🎛️ Fully interactive UI blending aesthetics with function</li>
+  <li>🧵 Crafted solo — code, concept, design, and integration</li>
+  <li>📈 Real-time simulation driven by mood, memory, and time</li>
+  <li>🕹️ Chat-enabled AI with dynamic responses and evolving state</li>
+  <li>🌌 Built as an evolving canvas — not just a product, but a world</li>
+  <li>🧪 Experimental, expressive, and grounded in psychological theory</li>
+  <li>⚡ Progressing fast — less than 30 days of development so far</li>
+</ul>
+<section id="social-spot" class="social-links-section">
+  <h2>📡 Stay Connected</h2>
+  <p>Follow Dorian for updates, development logs, and glimpses into the evolving emotional grid:</p>
+  <ul class="social-links-list">
+    <li><a href="https://x.com/Dorianworks" target="_blank">🐦 Twitter (X)</a></li>
+    <li><a href="https://github.com/dorianinnovations" target="_blank">💻 GitHub</a></li>
+    <li><a href="https://www.instagram.com/yourhandle" target="_blank">📷 LinkedIn</a></li>
+    <li><a href="mailto:dorianinnovations@gmail.com">📬 Email</a></li>
+  </ul>
+</section>
   </section>
 
   <!-- Footer -->
