--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&display=swap"
     rel="stylesheet">
 
+  <!-- Configuration -->
+  <script>
+    window.API_URL = 'https://dorianjs.onrender.com';
+  </script>
+
   <!-- JavaScript -->
   <script type="module" src="dorian.js"></script>
 </head>
