--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&display=swap"
     rel="stylesheet">
 
+  <!-- Configuration -->
+  <script>
+    window.API_URL = 'https://dorianjs.onrender.com';
+  </script>
+
   <!-- JavaScript -->
   <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/botui/build/botui.min.js"></script>
