Fix: Refactor file structure and update media paths

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/botui/build/botui.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/botui/build/botui-theme-default.css" />
-  <link rel="icon" href="logo.png" />
+  <link rel="icon" href="/media/logo.png" />
   <link rel="stylesheet" href="bot-ui-theme.css"/>
 
 
@@ -32,7 +32,6 @@
     rel="stylesheet">
 
   <!-- Configuration -->
-  <script src="config.js"></script>
 
   <!-- JavaScript -->
   <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.min.js"></script>
@@ -44,7 +43,7 @@
   <!-- Navigation Bar -->
   <nav class="navigation-bar" id="navigation-bar">
     <div class="navigation-bar-left">
-      <img src="logo.png" alt="Dorian Logo" class="logo">
+      <img src="/media/logo.png" alt="Dorian Logo" class="logo">
       <span class="navigation-title">Dorian</span>
     </div>
     <div class="navigation-bar-right">
@@ -75,7 +74,7 @@
   <!-- Header / Hero Section -->
   <div class="header">
     <video autoplay muted loop playsinline class="header-video">
-      <source src="cubesky.webm" type="video/webm" />
+      <source src="/media/cubesky.webm" type="video/webm" />
     </video>
     <a href="https://dorianai.replit.app/" class="heading-title">Dorian</a>
     <a class="heading-title-living-grid">THE LIVING GRID</a>
@@ -205,7 +204,7 @@
         </div>
 
         <!-- Audio Element -->
-        <audio id="ambience-audio" src="vibes.wav" type="audio/wav"></audio>
+        <audio id="ambience-audio" src="/media/vibes.wav" type="audio/wav"></audio>
       </div>
 
       <span>&#8595;</span>
@@ -215,7 +214,7 @@
   <!-- Thought Log Display -->
   <section class="thought-log-section-visible">
     <video autoplay muted loop playsinline class="thought-log-video">
-      <source src="footer.webm" type="video/webm" />
+      <source src="/media/footer.webm" type="video/webm" />
     </video>
     <h2 class="thought-log-title">Dorian's Recent Thoughts</h2>
     <h3 class="thought-log-subtitle">Each set tick interval, Dorian reflects on its state. Here, a log can be found of
